tests/type_errors/list_mixed_elements.nos
# expect_error: type mismatch
# Test that lists cannot have mixed element types

main() = {
    xs = [1, "two", 3]
    xs.length()
}
